--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,68 @@
+body {
+    height: 100vh;
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.calculator {
+    width: 360px;
+    padding: 24px;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: #324462;
+}
+
+.display {
+    padding: 10px 20px;
+    text-align: right;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-bottom: 24px;
+    background-color: #fff;
+}
+
+.prev-calc {
+    font-size: 20px;
+    min-height: 32px;
+}
+
+.current-calc {
+    font-size: 40px;
+    min-height: 48px;
+}
+
 button {
     cursor: pointer;
+    padding: 20px;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
+}
+
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 8px;
+}
+
+.num-buttons {
+    background-color: #ffffff;
+}
+
+.op-buttons {
+    background-color: #9c7e4f;
+    color: #fff;
+}
+
+.span-2 {
+    grid-column: span 2;
+    background-color: #e7d2d0;
 }
